bindings/c/include/proven.h

/* ============================================================================
 * Status Codes
 * ============================================================================ */

/**
 * @brief Status codes returned by Proven operations.
 *
 * Zero indicates success; negative values indicate specific error conditions.
 */
typedef enum {
    PROVEN_OK                      =   0,
    PROVEN_ERR_NULL_POINTER        =  -1,
    PROVEN_ERR_INVALID_ARGUMENT    =  -2,
    PROVEN_ERR_OVERFLOW            =  -3,
    PROVEN_ERR_UNDERFLOW           =  -4,
    PROVEN_ERR_DIVISION_BY_ZERO    =  -5,
    PROVEN_ERR_PARSE_FAILURE       =  -6,
    PROVEN_ERR_VALIDATION_FAILED   =  -7,
    PROVEN_ERR_OUT_OF_BOUNDS       =  -8,
    PROVEN_ERR_ENCODING_ERROR      =  -9,
    PROVEN_ERR_ALLOCATION_FAILED   = -10,
    PROVEN_ERR_NOT_IMPLEMENTED     = -99
} ProvenStatus;
/* ============================================================================
 * Core Result Types
 * ============================================================================ */

/** @brief Result for integer operations */
typedef struct { int32_t status; int64_t value; } ProvenIntResult;
/**
 * @brief Result for string operations.
 * @note Caller must free value using proven_free_string().
 */
typedef struct { int32_t status; char* value; size_t length; } ProvenStringResult;
/* ============================================================================
 * Memory Management (1 function)
 * ============================================================================ */

/**
 * @brief Free a string allocated by Proven functions.
 * @param ptr String to free (may be NULL).
 */
void proven_free_string(char* ptr);
/* ============================================================================
 * Lifecycle (3 functions)
 * ============================================================================ */

/**
 * @brief Initialize the Proven runtime (includes Idris 2 runtime).
 * @return PROVEN_OK on success, error code otherwise.
 *
 * Must be called before any other Proven function. Safe to call multiple times.
 */
int32_t proven_init(void);
/**
 * @brief Cleanup the Proven runtime.
 *
 * Call when done using Proven functions. All allocated resources should be
 * freed before calling this.
 */
void proven_deinit(void);
/**
 * @brief Check if the runtime is initialized.
 * @return true if initialized.
 */
bool proven_is_initialized(void);
/* ============================================================================
 * Version Information (4 functions)
 * ============================================================================ */

/** @brief Get FFI ABI version for compatibility checking. */
uint32_t proven_ffi_abi_version(void);
/** @brief Get major version number. */
uint32_t proven_version_major(void);
/** @brief Get minor version number. */
uint32_t proven_version_minor(void);
/** @brief Get patch version number. */
uint32_t proven_version_patch(void);
/** @brief Get total module count. */
uint32_t proven_module_count(void);
/* ============================================================================
 * SafeMath - Arithmetic that cannot crash (9 functions)
 * ============================================================================ */

/**
 * @brief Safe integer division.
 * @param numerator Dividend.
 * @param denominator Divisor.
 * @return Result with quotient; PROVEN_ERR_DIVISION_BY_ZERO if denominator is 0,
 *         PROVEN_ERR_OVERFLOW for INT64_MIN / -1.
 */
ProvenIntResult proven_math_div(int64_t numerator, int64_t denominator);
/**
 * @brief Safe modulo operation.
 * @return Result with remainder; PROVEN_ERR_DIVISION_BY_ZERO if denominator is 0.
 */
ProvenIntResult proven_math_mod(int64_t numerator, int64_t denominator);
/**
 * @brief Checked addition with overflow detection.
 * @return PROVEN_ERR_OVERFLOW if result would overflow int64_t.
 */
ProvenIntResult proven_math_add_checked(int64_t a, int64_t b);
/**
 * @brief Checked subtraction with underflow detection.
 * @return PROVEN_ERR_UNDERFLOW if result would underflow int64_t.
 */
ProvenIntResult proven_math_sub_checked(int64_t a, int64_t b);
/**
 * @brief Checked multiplication with overflow detection.
 * @return PROVEN_ERR_OVERFLOW if result would overflow int64_t.
 */
ProvenIntResult proven_math_mul_checked(int64_t a, int64_t b);
/**
 * @brief Safe absolute value.
 * @return PROVEN_ERR_OVERFLOW for INT64_MIN (cannot be represented as positive).
 */
ProvenIntResult proven_math_abs_safe(int64_t n);
/* ============================================================================
 * SafeDateTime - ISO 8601 date/time handling (4 functions)
 * ============================================================================ */

/** @brief DateTime components. */
typedef struct {
    int32_t  year;
    uint8_t  month;              /**< 1-12 */
    uint8_t  day;                /**< 1-31 */
    uint8_t  hour;               /**< 0-23 */
    uint8_t  minute;             /**< 0-59 */
    uint8_t  second;             /**< 0-59 */
    uint32_t nanosecond;
    int16_t  tz_offset_minutes;  /**< 0 for UTC, negative for west of UTC */
} ProvenDateTime;