bindings/csharp/src/Proven/LibProven.cs

// SPDX-License-Identifier: PMPL-1.0-or-later
// Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <jonathan.jewell@open.ac.uk>

// LibProven.cs - P/Invoke declarations for all FFI functions exported by libproven.
//
// ALL computation is performed in verified Idris 2 code via the Zig FFI bridge.
// This file contains ONLY interop declarations. Do NOT reimplement any algorithms.
//
// Memory management rules:
//   - ProvenStringResult.Ptr must be freed with proven_free_string()
//   - Integer, boolean, and float results do not require freeing

using System;
using System.Runtime.InteropServices;

namespace Proven
{
    // ========================================================================
    // Status Codes
    // ========================================================================

    /// <summary>
    /// Status codes returned by Proven FFI operations.
    /// Zero indicates success; negative values indicate specific error conditions.
    /// </summary>
    public enum ProvenStatus : int
    {
        /// <summary>Operation completed successfully.</summary>
        Ok = 0,
        /// <summary>Null pointer passed to function.</summary>
        ErrNullPointer = -1,
        /// <summary>Invalid argument provided.</summary>
        ErrInvalidArgument = -2,
        /// <summary>Integer overflow detected.</summary>
        ErrOverflow = -3,
        /// <summary>Integer underflow detected.</summary>
        ErrUnderflow = -4,
        /// <summary>Division by zero attempted.</summary>
        ErrDivisionByZero = -5,
        /// <summary>Input could not be parsed.</summary>
        ErrParseFailure = -6,
        /// <summary>Validation check failed.</summary>
        ErrValidationFailed = -7,
        /// <summary>Index out of bounds.</summary>
        ErrOutOfBounds = -8,
        /// <summary>Encoding or decoding error.</summary>
        ErrEncodingError = -9,
        /// <summary>Memory allocation failed.</summary>
        ErrAllocationFailed = -10,
        /// <summary>Feature not implemented.</summary>
        ErrNotImplemented = -99
    }

    // ========================================================================
    // Core Result Structs (match C ABI layout)
    // ========================================================================

    /// <summary>
    /// Result for integer operations. Matches C ABI: { int32_t status; int64_t value; }.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct IntResult
    {
        /// <summary>Status code (0 = success).</summary>
        public int Status;
        /// <summary>Result value (valid only when Status == 0).</summary>
        public long Value;
    }

    /// <summary>
    /// Result for boolean operations. Matches C ABI: { int32_t status; bool value; }.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct BoolResult
    {
        /// <summary>Status code (0 = success).</summary>
        public int Status;
        /// <summary>Result value as byte (0 = false, non-zero = true). Valid only when Status == 0.</summary>
        [MarshalAs(UnmanagedType.U1)]
        public bool Value;
    }

    /// <summary>
    /// Result for string operations. Matches C ABI: { int32_t status; char* value; size_t length; }.
    /// Caller must free Value using proven_free_string() after reading.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct StringResult
    {
        /// <summary>Status code (0 = success).</summary>
        public int Status;
        /// <summary>Pointer to UTF-8 string data (must be freed with proven_free_string).</summary>
        public IntPtr Ptr;
        /// <summary>Length of string data in bytes.</summary>
        public nuint Length;
    }

    /// <summary>
    /// Result for floating-point operations. Matches C ABI: { int32_t status; double value; }.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct FloatResult
    {
        /// <summary>Status code (0 = success).</summary>
        public int Status;
        /// <summary>Result value (valid only when Status == 0).</summary>
        public double Value;
    }

    // ========================================================================
    // Domain-specific Structs
    // ========================================================================

    /// <summary>IPv4 address (4 bytes).</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct IPv4Address
    {
        /// <summary>Four octets of the IPv4 address.</summary>
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = 4)]
        public byte[] Octets;
    }

    /// <summary>Result for IPv4 parsing.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct IPv4Result
    {
        /// <summary>Status code (0 = success).</summary>
        public int Status;
        /// <summary>Parsed IPv4 address.</summary>
        public IPv4Address Address;
    }

    /// <summary>DateTime components matching the C ABI ProvenDateTime struct.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ProvenDateTime
    {
        /// <summary>Year.</summary>
        public int Year;
        /// <summary>Month (1-12).</summary>
        public byte Month;
        /// <summary>Day (1-31).</summary>
        public byte Day;
        /// <summary>Hour (0-23).</summary>
        public byte Hour;
        /// <summary>Minute (0-59).</summary>
        public byte Minute;
        /// <summary>Second (0-59).</summary>
        public byte Second;
        /// <summary>Nanosecond component.</summary>
        public uint Nanosecond;
        /// <summary>Timezone offset in minutes (0 for UTC, negative for west).</summary>
        public short TzOffsetMinutes;
    }

    /// <summary>Result for DateTime parsing.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct DateTimeResult
    {
        /// <summary>Status code (0 = success).</summary>
        public int Status;
        /// <summary>Parsed DateTime components.</summary>
        public ProvenDateTime DateTime;
    }

    /// <summary>JSON value type enumeration.</summary>
    public enum JsonType : int
    {
        /// <summary>JSON null value.</summary>
        Null = 0,
        /// <summary>JSON boolean value.</summary>
        Bool = 1,
        /// <summary>JSON number value.</summary>
        Number = 2,
        /// <summary>JSON string value.</summary>
        String = 3,
        /// <summary>JSON array value.</summary>
        Array = 4,
        /// <summary>JSON object value.</summary>
        Object = 5,
        /// <summary>Invalid or unparseable JSON.</summary>
        Invalid = -1
    }

    // ========================================================================
    // P/Invoke Declarations
    // ========================================================================

    /// <summary>
    /// Low-level P/Invoke bindings to libproven. These should not be called
    /// directly in most cases; use the safe wrapper classes (SafeMath, SafeString,
    /// etc.) instead, which handle marshaling and memory management.
    /// </summary>
    public static class LibProven
    {
        /// <summary>Native library name for P/Invoke resolution.</summary>
        private const string LibName = "proven";

        // --------------------------------------------------------------------
        // Memory Management (1 function)
        // --------------------------------------------------------------------

        /// <summary>
        /// Free a string allocated by Proven functions.
        /// </summary>
        /// <param name="ptr">Pointer to the string to free (may be IntPtr.Zero).</param>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void proven_free_string(IntPtr ptr);

        // --------------------------------------------------------------------
        // Lifecycle (3 functions)
        // --------------------------------------------------------------------

        /// <summary>
        /// Initialize the Proven runtime (includes Idris 2 runtime).
        /// Must be called before any other Proven function.
        /// </summary>
        /// <returns>PROVEN_OK (0) on success, error code otherwise.</returns>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int proven_init();

        /// <summary>
        /// Cleanup the Proven runtime.
        /// </summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void proven_deinit();

        /// <summary>
        /// Check if the runtime is initialized.
        /// </summary>
        /// <returns>true if initialized.</returns>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool proven_is_initialized();

        // --------------------------------------------------------------------
        // Version Information (5 functions)
        // --------------------------------------------------------------------

        /// <summary>Get FFI ABI version for compatibility checking.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint proven_ffi_abi_version();

        /// <summary>Get major version number.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint proven_version_major();

        /// <summary>Get minor version number.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint proven_version_minor();

        /// <summary>Get patch version number.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint proven_version_patch();

        /// <summary>Get total module count.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint proven_module_count();

        // --------------------------------------------------------------------
        // SafeMath - Arithmetic that cannot crash (8 functions)
        // --------------------------------------------------------------------

        /// <summary>Checked addition with overflow detection.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntResult proven_math_add_checked(long a, long b);

        /// <summary>Checked subtraction with underflow detection.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntResult proven_math_sub_checked(long a, long b);

        /// <summary>Checked multiplication with overflow detection.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntResult proven_math_mul_checked(long a, long b);

        /// <summary>Safe integer division. Returns error on division by zero or INT64_MIN / -1.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntResult proven_math_div(long numerator, long denominator);

        /// <summary>Safe modulo operation. Returns error on division by zero.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntResult proven_math_mod(long numerator, long denominator);

        /// <summary>Safe absolute value. Returns error for INT64_MIN.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntResult proven_math_abs_safe(long n);
